Fix auto scroll spacing

--- a/assets/scss/_sections.scss
+++ b/assets/scss/_sections.scss
@@ -68,6 +68,12 @@ header {
     }
 }
 
+#experience-inner {
+    header {
+        padding-top: 2em;
+    }
+}
+
 #activities-inner {
     ul {
         margin: 0;
